fix(dialog): IE11 bugs: scroll and overflow problem on normal dialog, width and position on popover dialog

--- a/packages/dialog/src/mwc-dialog.scss
+++ b/packages/dialog/src/mwc-dialog.scss
@@ -28,13 +28,19 @@ limitations under the License.
     left: auto;
     top: auto;
     position: fixed;
+    max-width: 100%;
+    margin: 0 auto;
 
     &.mdc-dialog--pre-open {
       opacity: 0;
       transition: transform 0.3s, opacity 0.3s;
       transform: scale(0.7);
     }
+    &.mdc-dialog--closing {
+      display: block;
+    }
     &.mdc-dialog--open {
+      display: block;
       opacity: 1;
       transform: scale(1);
     }
@@ -65,6 +71,15 @@ limitations under the License.
     .mdc-dialog__surface {
       max-height: 100%;
       max-width: 100%;
+    }
+  }
+}
+
+.mdc-dialog--normal {
+  .mdc-dialog__surface {
+    @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+      /* IE10+ specific styles go here */  
+      overflow: scroll;
     }
   }
 }
